--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -8,12 +8,11 @@ dependencies {
      *
      * TODO: Temporary solution. Should be removed after moving cordova-android to androidx. Then use androidx.biometric.
      */
-    implementation files('src/main/libs/android-biometric.aar')
-
-	implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.biometric:biometric:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	implementation 'com.google.android.material:material:1.0.0-rc01'
 }
 
 android {
